@@ -1,21 +1,18 @@
-This major release announce the move from Cglib to ByteBuddy. 
-Sadly good old Cglib can't cope with all the tricks needed to workaround JPMS and reflection limitations.
-It means you will most probably experience some issues until it stabilizes.
-
-The good news are that this version is working up to Java 18.
-
-Known issues:
-* Serialization of a mock is broken (#312)
-* Running in OSGi doesn't work (#313)
-
-All help is greatly appreciated.
+Quick fix allowing package-private methods to be mocked.
 
 Change log
 ----------
-* Replace Cglib with Bytebuddy to support Java 9+ ([#300](https://github.com/easymock/easymock/pull/300))
-* Fix core source-jar, added maven-source-plugin ([#283](https://github.com/easymock/easymock/pull/283))
-* Upgrade to ASM 9.2 so that easymock can work with JDK18-EA #277 ([#278](https://github.com/easymock/easymock/pull/278))
-* Upgrade to ASM 9.2 so that easymock can work with JDK18-EA ([#277](https://github.com/easymock/easymock/issues/277))
-* Does not work with Java 17 ([#274](https://github.com/easymock/easymock/issues/274))
-* Allow @Mock to get a default name from the variable being mocked ([#260](https://github.com/easymock/easymock/issues/260))
-* Easymock doesn't work in Java 11 with --illegal-access=deny ([#235](https://github.com/easymock/easymock/issues/235))
+* Mocking package-private methods not working in 5.0.0 ([#331](https://github.com/easymock/easymock/issues/331))
+* Bump versions-maven-plugin from 2.12.0 to 2.13.0 ([#333](https://github.com/easymock/easymock/pull/333))
+* Bump nokogiri from 1.13.8 to 1.13.9 in /website ([#332](https://github.com/easymock/easymock/pull/332))
+* Bump spotbugs from 4.7.2 to 4.7.3 ([#330](https://github.com/easymock/easymock/pull/330))
+* Bump maven-javadoc-plugin from 3.2.0 to 3.4.1 ([#329](https://github.com/easymock/easymock/pull/329))
+* Bump nexus-staging-maven-plugin from 1.6.8 to 1.6.13 ([#328](https://github.com/easymock/easymock/pull/328))
+* Bump maven-compiler-plugin from 3.8.1 to 3.10.1 ([#327](https://github.com/easymock/easymock/pull/327))
+* Bump animal-sniffer-maven-plugin from 1.20 to 1.22 ([#326](https://github.com/easymock/easymock/pull/326))
+* Bump maven-deploy-plugin from 3.0.0-M1 to 3.0.0 ([#325](https://github.com/easymock/easymock/pull/325))
+* Bump maven-pmd-plugin from 3.14.0 to 3.19.0 ([#324](https://github.com/easymock/easymock/pull/324))
+* Bump maven-resources-plugin from 3.2.0 to 3.3.0 ([#323](https://github.com/easymock/easymock/pull/323))
+* Bump maven-site-plugin from 3.9.1 to 3.12.1 ([#322](https://github.com/easymock/easymock/pull/322))
+* Bump exec-maven-plugin from 3.0.0 to 3.1.0 ([#321](https://github.com/easymock/easymock/pull/321))
+* Bump maven-remote-resources-plugin from 1.7.0 to 3.0.0 ([#319](https://github.com/easymock/easymock/pull/319))
